--- a/slides/src/main/asciidoc/presentation.adoc
+++ b/slides/src/main/asciidoc/presentation.adoc
@@ -1,4 +1,4 @@
-= Kafka: некоторые интересные практики
+= Kafka – шина, очередь или БД?
 :revealjs_theme: black
 :revealjs_customtheme: theme.css
 :revealjs_slideNumber:
@@ -23,338 +23,300 @@ include::_doc_general_attributes.adoc[]
 
 :!figure-caption:
 
+image::kafka_logo.png[]
+
 Алексей Коняев, akonyaev@croc.ru
 
-[%notitle]
-== Истории создания и развития
+== 1. Как устроена Kafka
+
+image::under_the_hood.png[]
+
+=== Kafka cluster
+[cols="40a,60a",frame=none,grid=none]
+|===
+|
+* Брокеры (+ZooKeeper)
+** Один выбирается на роль Контроллера (может быть переизбран)
+** Чтобы подключиться к кластеру достаточно указать адрес любого брокера (kafka:9092)
+* Producer
+* Consumer
+
+|image::kafka_arc.png[1100,900]
+|===
+
+=== Топики
+[%step]
+* Определяется именем
+* Разделен на партиции - "Единица параллелизма" (num.partitions = 1)
+** Для каждой партиции свой брокер-лидер, остальные In-Sync-Replicas (ISR)
+* Бинарный файл на брокере (разделен на сегменты, путь к папке задан в log.dirs)
+* Имеет реплики (replication.factor = 1, рекомендуется >= 3)
+* _Подрезается_ с конца
+** по времени жизни (retention.ms = 7 дней)
+** по размеру (retention.bytes = -1)
+* Внутри топика сообщения
+** Бинарные ключ и значение
+** Offset внутри партиции - порядковый номер
+** Timestamp - по умолчанию CreateTime (ещё есть LogAppendTime)
+** Заголовки - список пар ключ-значение (String-byte[])
+
+=== Producer
+[%step]
+** Сериализует ключ и значение сообщения
+** Определяет номер партиции
+*** по умолчанию DefaultPartitioner = hash(key)%num_partitions
+*** можно задать другой (например, RoundRobinPartitioner или свою реализацию)
+** Ожидает подтверждения записи (acks):
+*** 0 - не ждать, будь что будет
+*** 1 - брокер-лидер для данного топика подтвердил запись
+*** all - все реплики подтвердили запись
+** Максимальный размер сообщения по умолчанию 1Mb (message.max.bytes)
+*** можно увеличить, но осторожно!
+*** можно включить сжатие (gzip, snappy, lz4, zstd)
+*** делить на куски или хранить во внешнем хранилище, а в Kafka - ссылки
+** Использует батчи (batch.size = 16Kb, linger.ms = 0)
+
+=== Consumer
+[%step]
+* Десериализует ключ и значение сообщения
+* Объединяются в группы (group.id)
+** Потребители из одной группы распределяют партиции между собой
+** Координация выполняется с помощью "Kafka Rebalance Protocol"
+*** consumer-ы отправляют heartbeat-ы Координатору (один из брокеров)
+*** Rebalance запускается, когда consumer отключился или подключились новые
+** Группы consumer-ов читают данные из топиков независимо друг от друга
+* Выполняет Polling сообщений из Кафки
+** Если poll выполнять редко, то можно нарваться на rebalance
+
+=== Consumer groups
+image::kafka_consumer_0.png[]
+
+=== Consumer groups
+image::kafka_consumer_1.png[]
+
+=== Consumer groups
+image::kafka_consumer_2.png[]
+
+=== Consumer groups
+Кол-во партиций лучше сразу сделать с запасом!
+
+image::kafka_consumer_3.png[]
+
+=== Consumer groups
+
+Очередность получения событий сохраняется
+
+* В рамках партиции
+* Для событий с одинаковым ключом
+
+image::kafka_consumer_4.png[1000,800]
+
+== 2. Задачи, в которых применима Kafka
+
+=== Queue
+
+* с одной стороны создают "задания"
+* с другой - эти задачи нужно выполнять:
+** в той же последовательности (или нет)
+** как можно быстрее
+** при неудачной обработке нужно пропустить, повторить...
+
+{nbsp}
+
+*Consumer внутри группы читают данные из топика, как из очереди!*
+
+{nbsp}
+
+Пример: запросы на формирование отчетов в ЦР
+
+=== Pub-Sub systems (Event sourcing)
+
+* Издатели просто публикуют события, для всех
+* Подписчики - подписываются на интересующие их каналы/топики, возможно, при этом фильтруя события
+
+{nbsp}
+
+*Consumer Groups читают данные из топика независимо друг от друга!*
+
+{nbsp}
+
+Пример: в ЦР события перемещения объекта потребляют UI, процессор бизнес-правил и др.
+
+=== Service Bus
+
+* единая точка обмена сообщениями между системами
+* транзакции, контроль форматов сообщений, их преобразование и сохранность
+* умная маршрутизация сообщений
+
+{nbsp}
+*Kafka*
+
+* есть механизм транзакций, который обеспечивает "Exactly Once" семантику
+* есть различные коннекторы - Kafka Connect
+* формат сообщений можно регулировать через Schema Registry (by Confluent)
+* все сообщения надежно хранятся
+* НО маршрутизацию сообщений нужно программировать самим
+
+{nbsp}
+
+Пример: почти все подсистемы ЦР взаимодействуют через Кафку, модуль Нотификаций реализует логику маршрутизации
+
+=== Stream processing
+
+Обработка потока данных "на лету"
+
+image::kafka_streams.png[]
+
+{nbsp}
+
+Пример: В ЦР на входе события перемещения метки - на выходе: перемещение объекта, вход/выход из геозоны, нотификации
+
+=== Database. Stream Table duality
+
+image::changelog.gif[]
+
+=== Database. KTable & KeyValueStore
+
+* KTable - процессор на Kafka Streams, у которого есть состояние
+* Данные хранятся в памяти + сохраняются на диск в RocksDB
+* Бекап - в compacted-топиках
+* KSqlDB - надстройка над Kafka Streams (by Confluent)
+
+{nbsp}
+
+Пример: Объекты в геозонах, статус online/offline
+
+=== Database. GlobalKTable
+
+* KTable - партиционируется, GlobalKTable - нет
 
 [cols="50a,50a",frame=none,grid=none]
 |===
-.^|
-[%step]
-* 2011 - LinkedIn передал в open-source
-* 2014 - Создана компания Confluent
-* 2019 - Release 2.4.0
-.^|image::kafka_logo.png[]
-
-[big]##Горизонтально-масштабируемая#
-
-[big]##Быстрая#
-
-[big]##Отказоустойчивая#
+|image::ktable.png[]|image::globalktable.png[]|
 |===
 
-== Как устроена
+=== Database. Interactive Queries
 
-[cols="30a,70a",frame=none,grid=none]
-|===
-|
-* Event log
-** key
-** body
-** timestamp
-* Topic
-** offset
-** partitions
-** replication-factor
-** retention
-* Producer & Consumer
-* Exactly-once semantics
-|image::kafka_anatomy.png[]
-|===
+*  Механизм доступа к State-у из вне
 
-//== 1 партиция -- 1 группа с 1 потребителем
-//image::kafka_consumer_0.png[width=40%]
-//
-//== N партиций -- 1 группа с 1 потребителем
-//image::kafka_consumer_1.png[width=40%]
-//
-//== N партиций -- Несколько групп по M потребителей (M &le; N)
-//image::kafka_consumer_2.png[width=40%]
-//
-//== N партиций -- 1 группа с M потребителем (M > N)
-//image::kafka_consumer_3.png[width=40%]
-//
-//== Очередность получения событий сохраняется
-//* В рамках партиции
-//* Для событий с одинаковым ключом
-//
-//image::kafka_consumer_4.png[width=50%]
+image::streams-interactive-queries.png[]
 
-== Цифровой рабочий
+== 3. Отладка и тестирование
 
-[cols="30a,70a",frame=none,grid=none]
-|===
-.^|
-* Носимые технологии
-* Позиционирование IN/OUT-DOOR
-* Работа в режиме реального времени
-* Обработка до 1.5М событий в секунду
-.^|image::digital_worker.png[]
-|===
+=== Поднимаем в Docker
+docker-compose.yaml
+[source,yaml]
+----
+version: '3.7'
+services:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:5.4.1
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+  kafka:
+    image: confluentinc/cp-server:5.4.1
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 1
+----
 
-== Архитектура
-image::dw_architecture.jpg[width=75%]
+=== Консольные утилиты
 
-== Топология
-image::dw_topology.jpg[width=75%]
+=== Список топиков
+[source,bash]
+----
+$ kafka-topics --zookeeper zookeeper:2181 --list
 
-== Идеология
+$ kafkacat -b kafka:9092 -L
+----
+=== Публикация сообщений
+[source,bash]
+----
+$ kafka-console-producer --broker-list kafka:9092 --topic my_topic
+    --property "parse.key=true" --property "key.separator=\t" < my_file.txt
 
-* Для каждого класса события существует ровно один топик
-* Тип ключа - String
+$ kafkacat -b kafka:9092 -t my_topic -P -K\t
 
-image::code1.png[width=60%]
-//{nbsp}
-//[source,yaml,subs="normal"]
-//----
-//croc.kafka:
-//  eventTopic:
-//
-//    _MyEventClass_: _topic-name-for-my-event_
-//
-//    TagMovementEvent: tag-movement
-//    TrackableObjectMovementEvent: object-movement
-//    TagLinkEvent: tag-link
-//----
+$ kafkacat -b kafka:9092 -t my_topic -P -K\t -l my_file.txt
+----
+=== Утилиты. Чтение сообщений
+[source,bash]
+----
+$ kafka-console-consumer --bootstrap-server kafka:9092 --topic my_topic
+    --property print.key=true --property print.value=true
 
-== TerminalEventProcessor
-image::code2.png[width=75%]
-//[source,java,subs="normal"]
-//----
-//public class TagUnlinkProcessor extends
-//        BaseTerminalEventProcessor< [blue yellow-background]*TagLinkEvent* > {
-//
-//    @Override
-//    protected void processEvent(String key, TagLinkEvent inputEvent) {
-//
-//        . . .
-//
-//    }
-//}
-//----
+$ kafkacat -b kafka:9092 -t my_topic -C -o end -K\t
 
-== TransformingEventProcessor
-image::code3.png[width=80%]
-//[source,java,subs="normal"]
-//----
-//public class ObjectCoordsProcessor extends
-//        BaseTransformingEventProcessor<
-//                [blue yellow-background]*TrackableObjectMovementEvent*,
-//                [navy aqua-background]*TrackableObjectCoordsEvent*> {
-//
-//    @Override
-//    protected List<TrackableObjectCoordsEvent> processEvent(
-//            String key,
-//            TrackableObjectMovementEvent inputEvent) {
-//
-//        if (inputEvent.getMovementType() == MovementType.NO_SIGNAL) {
-//            return null;
-//        }
-//
-//        . . .
-//
-//        TrackableObjectCoordsEvent outputEvent = new TrackableObjectCoordsEvent(...);
-//        return Collections.singletonList(outputEvent);
-//    }
-//}
-//----
+$ kafkacat -b kafka:9092 -t my_topic -C -o beginning -c 10
+----
 
-== StateEventProcessor
-image::code4.png[width=80%]
-//[source,java,subs="normal"]
-//----
-//public class ObjectMovementProcessor extends
-//        BaseTransformingStateEventProcessor<
-//                [blue yellow-background]*TagMovementEvent*,
-//                [navy aqua-background]*TrackableObjectMovementEvent*,
-//                [maroon lime-background]*TagMovementState* > {
-//
-//    @Override
-//    protected List<TrackableObjectMovementEvent> processEvent(
-//            String key, TagMovementEvent inputEvent, TagMovementState state) {
-//        . . .
-//        if (getDistance(inputEvent.getCoordinates(), state.getCoordinates()) < 1.0) {
-//            return null;
-//        }
-//
-//        state.setCoordinates(inputEvent.getCoordinates());
-//        super.updateState(key, state);
-//        . . .
-//    }
-//}
-//----
+=== Conductor.io
 
-== BaseStateEventProcessor & EventProcessorState
-image::code5.png[width=80%]
-//[source,java,subs="normal"]
-//----
-//public abstract class BaseStateEventProcessor
-//        <EventToProcess extends Event, ProcessorState extends EventProcessorState> {
-//
-//    protected KeyValueStore<String, ProcessorState> *stateStore*;
-//
-//
-//    protected ProcessorState *getState*(String key) { ... }
-//
-//    protected void *updateState*(String key, ProcessorState newState) { ... }
-//
-//    protected void *resetState*(String key) { ... }
-//}
-//
-//
-//public abstract class EventProcessorState {
-//    public long *getAge*() { ... }
-//}
-//----
+image::conductor.png[]
 
-== Punctuator
-image::code6.png[width=80%]
-//[source,java,subs="verbatim,quotes"]
-//----
-//public class ObjectMovementProcessor extends
-//        BaseTransformingStateEventProcessor<
-//                TagMovementEvent, TrackableObjectMovementEvent, TagMovementState> {
-//
-//    @Override
-//    protected PunctuatorSupplier getPunctuatorSupplier() {
-//        return new PunctuatorSupplier(
-//            timestamp -> {
-//                super.[blue yellow-background]*stateStore*.all().forEachRemaining(item -> {
-//                    String key = item.key;
-//                    TagMovementState state = item.value;
-//
-//                    if (state.getAge() <= 30000) {
-//                        return;
-//                    }
-//
-//                    TrackableObjectMovementEvent outputEvent = getSignalLostEvent(key, state);
-//                    super.[blue yellow-background]*sendResultEvent*(outputEvent);
-//                });
-//
-//            },
-//            60000); // частота запуска
-//    }
-//}
-//----
-
-== EventProcessorRunner
-image::code7.png[width=55%]
-//[source,java,subs="normal"]
-//----
-//[blue yellow-background]*@EnableEventProcessorRunner*
-//public class Application {
-//
-//    public static void main(String[] args) {
-//
-//        SpringApplication.run(Application.class, args);
-//
-//    }
-//}
-//----
+=== Тестирование
 
 [%step]
-* Находит все процессоры
-* Автоматически строит топологию
-* Проверяет наличие топиков
+* org.springframework.kafka.test.EmbeddedKafkaBroker
+* org.testcontainers.containers.KafkaContainer
+* собирать и запускать тесты в докере, поднимая в соседнем контейнере кафку
+* TopologyTestDriver - для тестирования KafkaStream приложений
 
-//== Поднимаем в Docker: docker-compose.yaml
-//[source,yaml]
-//----
-//version: '2.4'
-//services:
-//
-//  zookeeper:
-//    image: wurstmeister/zookeeper
-//    ports:
-//      - "2181:2181"
-//
-//  kafka:
-//    image: wurstmeister/kafka
-//    depends_on:
-//      - zookeeper
-//    ports:
-//      - "9092:9092"
-//    environment:
-//      KAFKA_LISTENERS: PLAINTEXT://kafka:9092
-//      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-//      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-//      KAFKA_CREATE_TOPICS: >-
-//        position:1:1,
-//        distance:1:1,
-//        speed:1:1,
-//        acceleration:1:1
-//----
-//== Подключаемся из приложения: application.yml
-//{nbsp}
-//[source,yaml]
-//----
-//spring.kafka:
-//  bootstrap-servers: kafka:9092
-//----
-//{nbsp}
-//{nbsp}
-//
-//Для отладки с локального хоста
-//{nbsp}
-//[source,text]
-//----
-//c:\Windows\System32\drivers\etc\hosts
-//
-//127.0.0.1 kafka
-//----
-//
-//== Утилиты. Список топиков
-//{nbsp}
-//[source,bash]
-//----
-//$ kafka-topics --zookeeper zookeeper:2181 --list
-//
-//
-//$ kafkacat -b kafka:9092 -L
-//----
-//== Утилиты. Публикация событий
-//{nbsp}
-//[source,bash]
-//----
-//$ kafka-console-producer --broker-list kafka:9092 --topic my_topic \
-//    --property "parse.key=true" --property "key.separator=\t"  < my_file.txt
-//
-//
-//$ kafkacat -b kafka:9092 -t my_topic -P -K\t
-//
-//$ kafkacat -b kafka:9092 -t my_topic -P -K\t -l my_file.txt
-//----
-//== Утилиты. Потребление событий
-//{nbsp}
-//[source,bash]
-//----
-//$ kafka-console-consumer --bootstrap-server kafka:9092 --topic my_topic \
-//    --property print.key=true --property print.value=true
-//
-//
-//$ kafkacat -b kafka:9092 -t my_topic -C -o end -K\t
-//
-//$ kafkacat -b kafka:9092 -t my_topic -C -o beginning -c 10
-//----
+== 4. Spring Kafka
+application.yml
+[source,yaml]
+----
+spring.kafka:
+  bootstrap-servers: localhost:9092
+----
 
-== Что ещё интересного
+=== Producer
+[source,java]
+----
+@Bean
+public KafkaTemplate<String, Event> kafkaTemplate(
+        ProducerFactory<String, Event> factory, ObjectMapper mapper) {
+    factory.setKeySerializer(new StringSerializer());
+    factory.setValueSerializer(new JsonSerializer<>(mapper));
+    return new KafkaTemplate<>(factory);
+}
 
-[%step]
-* Как поднять в Docker
-* Публикация событий c `KafkaPublisher`
-* Потребление событий c `KafkaConsumer`
-** подписка на события
-** режим _Машины времени_
-* Интеграция с
-** Esper
-** Clickhouse
 
-== Итоги
-[%step]
-* Kafka легко принести в свой проект
-* Kafka подходит
-** для взаимодействия модулей
-** для потоковой обработки данных
-** в Event Sourcing архитектуре
-* *Можно использовать наработки проекта ''Цифровой рабочий''*
+kafkaTemplate.send(topic, eventKey, event);
+----
+=== Consumer
+[source,java]
+----
+@KafkaListener(id = "myConsumerGroup", topics = "myTopic")
+public void listen(String message) {
+    ...
+}
+
+@KafkaListener(id = "pollResults", topics = "myTopic", containerFactory = "batchFactory")
+public void pollResults(ConsumerRecords<?, ?> records) {
+    ...
+}
+
+@KafkaListener(id = "listMsgAckConsumer", topics = "myTopic", containerFactory = "batchFactory")
+void listenWithManualCommits(List<Message<?>> list, Acknowledgment ack, Consumer<?, ?> consumer) {
+    ...
+}
+----
+
+== Ссылки
+* http://kafka.apache.org/documentation
+* http://kafka-tutorials.confluent.io
+* http://docs.spring.io/spring-kafka/docs/2.5.0.RELEASE/reference/html/#kafka
+* http://t.me/proKafka
