--- a/slides/src/main/asciidoc/presentation.adoc
+++ b/slides/src/main/asciidoc/presentation.adoc
@@ -251,7 +251,7 @@ $ kafkacat -b kafka:9092 -t my_topic -P -K\t
 
 $ kafkacat -b kafka:9092 -t my_topic -P -K\t -l my_file.txt
 ----
-=== Утилиты. Чтение сообщений
+=== Чтение сообщений
 [source,bash]
 ----
 $ kafka-console-consumer --bootstrap-server kafka:9092 --topic my_topic
